Bug 147249 - WARNING: getJSEventListener: event listener already found but with html=true
Summary: WARNING: getJSEventListener: event listener already found but with html=true
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-26 16:05 UTC by Axel Kittenberger
Modified: 2008-04-13 20:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Kittenberger 2007-06-26 16:05:45 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

konqueror: WARNING: getJSEventListener: event listener already found but with html=true - please report this, we thought it would never happen

So I'm following your request and reporting.

this is raised by an application I'm just developing with GWT. It works with Firefox and Explorer, and I don't know for sure if I'm doing something wrong, or konqueror is.

I uploaded a testcase, I will keep it only online until this bugreport is closed.
http://www.pri.univie.ac.at/~axel/testcase/com.axel.acearea.AceArea/AceArea.html
Comment 1 Richard Kolkovich 2008-03-04 00:35:24 UTC
I can reproduce this bug with the web interface for my company's internally developed web toolkit (upon initialization - looks to be the same as the OP).  Unfortunately, I cannot provide any code samples, but I can assist with debugging in other ways if needed.

Thanks.
Comment 2 Maksim Orlovich 2008-03-14 19:53:13 UTC
SVN commit 785693 by orlovich:

Apply a patch from Vyacheslav Tokarev (username tsjoker, hostname gmail, tld com)
that fixes multiple issues with event listeners:

1. Use the proper 'this' object for object-style event listeners.
2. Use the object, not function, for comparison of object-style
event listeners
3. Properly keep html-style and normal listener objects separate ---
they behave independent, even if they wrap the same function,
and of course have different event-cancellation semantics

BUG:147249
BUG:111568
BUG:128416


 M  +12 -8     kjs_events.cpp  
 M  +2 -2      kjs_events.h  
 M  +6 -6      kjs_window.cpp  
 M  +1 -1      kjs_window.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=785693
Comment 3 Maksim Orlovich 2008-03-14 19:58:08 UTC
SVN commit 785698 by orlovich:

Regression tests for event listener changes...
CCBUG:147249
CCBUG:111568
CCBUG:128416



 A             baseline/events/dom-style-event.html-dom  
 AM            baseline/events/dom-style-event.html-dump.png  
 A             baseline/events/dom-style-event.html-render  
 A             baseline/events/two-listener-kinds.html-dom  
 AM            baseline/events/two-listener-kinds.html-dump.png  
 A             baseline/events/two-listener-kinds.html-render  
 A             baseline/events/two-listener-kinds2.html-dom  
 AM            baseline/events/two-listener-kinds2.html-dump.png  
 A             baseline/events/two-listener-kinds2.html-render  
 A             tests/events/dom-style-event.html  
 A             tests/events/two-listener-kinds.html  
 A             tests/events/two-listener-kinds2.html  


WebSVN link: http://websvn.kde.org/?view=rev&revision=785698
Comment 4 Andreas Goeb 2008-04-13 20:38:29 UTC
I am unable to check with the latest version from SVN, but I experienced the same message on http://www.kaioo.com/ (also using Google Web Toolkit). Perhaps somebody could check and confirm that the fix also covers those errors. It happened directly on the home page, no need to register at that site.

Thank you,
Andreas