Apply a patch from Vyacheslav Tokarev (username tsjoker, hostname gmail, tld com) that fixes multiple issues with event listeners:

1. Use the proper 'this' object for object-style event listeners.
2. Use the object, not function, for comparison of object-style
event listeners
3. Properly keep html-style and normal listener objects separate ---
they behave independent, even if they wrap the same function,
and of course have different event-cancellation semantics

BUG:147249
BUG:111568
BUG:128416

svn path=/branches/KDE/4.0/kdelibs/; revision=785693