khtml/ecma/kjs_window.h
@@ -135,7 +135,7 @@ namespace KJS {
     // Set the current "event" object
     void setCurrentEvent( DOM::EventImpl *evt );
 
-    QHash<void*, JSEventListener*> jsEventListeners;
+    QHash<const QPair<void*, bool>, JSEventListener*> jsEventListeners;
     virtual const ClassInfo* classInfo() const { return &info; }
     static const ClassInfo info;
     enum { Closed, Crypto, DefaultStatus, Status, Document, Node, EventCtor, Range,
